# Kaiten

./: Cargo.toml  LICENSE  README.md
docs/: Game ID Encoding.md  Move Notation.md  Packets.md
src/: axis.rs  board.rs  hello.rs  lib.rs  player_colour.rs  player_move.rs
src/client/: mod.rs  packet.rs
src/server/: mod.rs  packet.rs
